# ols-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
data/boston_housing/: housing_sample.csv
data/energy_efficiency/: process_yield.csv
data/marketing_mix/: ad_performance.csv
src/: cli.rs  config.rs  lib.rs  main.rs  regression.rs
src/regression/: diagnostics.rs  mod.rs  preprocess.rs  report.rs  solve.rs
