[package]
name = "ols-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
csv = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
nalgebra = { version = "0.32", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "test-util"] }
